--- a/InicioTable.html
+++ b/InicioTable.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="imag/img1.png">
     <title>Menú En Línea</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
    <head>
