--- a/preciosydemás.html
+++ b/preciosydemás.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="imag/TechLab_Negro_Transparente.png">
     <title>Precios TechLab Costa Rica</title>
-    <link rel="stylesheet" href="css/techlab.css">
+    <link rel="stylesheet" href="techlab.css">
   </head>
   <body>
     <header>
