--- a/InicioTable.html
+++ b/InicioTable.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="imag/img1.png">
+    <link rel="shortcut icon" href="img1.png">
     <title>Menú En Línea</title>
     <link rel="stylesheet" href="styles.css">
   </head>
