--- a/InicioTable.html
+++ b/InicioTable.html
@@ -12,7 +12,7 @@
    <head>
      <div class="content">
        <center>
-         <img src="imag/img1.png" alt="logo" class="logo">
+         <img src="img1.png" alt="logo" class="logo">
          <h1>Menú Digital</h1>
          <h3>Demás menús al <span>pie</span> de la página</h3>
        </center>
